# content-moderation-env

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
.claude/: cloude-code-toolbox-mcp-skills-awareness.md
.venv-1/: .gitignore  pyvenv.cfg
.venv-1/Scripts/: activate  activate.bat  activate.fish
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
